Refactor and test with the pinterest api

--- a/.gitignore
+++ b/.gitignore
@@ -332,6 +332,7 @@ ASALocalRun/
 
 # Local History for Visual Studio
 .localhistory/
-PogBot/src/token.txt
-PogBot/src/cx.txt
-PogBot/src/key.txt
+
+# Secret keys
+PogBot/src/keys.txt
+ignore
