Returns different images
Bot now able to check if it already has sent an image before and will send another one

--- a/PogBot/PogBot.csproj
+++ b/PogBot/PogBot.csproj
@@ -12,6 +12,7 @@
     <None Remove="src\cx.txt" />
     <None Remove="src\key.txt" />
     <None Remove="src\keys.txt" />
+    <None Remove="src\saved_images.txt" />
     <None Remove="src\Token.txt" />
   </ItemGroup>
 
@@ -19,6 +20,7 @@
     <Content Include="src\keys.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="src\saved_images.txt" />
   </ItemGroup>
 
   <ItemGroup>
